# esp32-remote-daplink

./: .cproject  .project  CMakeLists.txt  Makefile  readme.md  sdkconfig  sdkconfig.old
components/esp32usb/: CMakeLists.txt  Kconfig
components/esp32usb/include/: psram_allocator.h  tusb_config.h  usb.h
components/esp32usb/src/: usb.cpp  usb_cdc.cpp  usb_desc.cpp  usb_hid.cpp  usb_msc.cpp
components/esp32usb/src/tinyusb/lib/fatfs/: ccsbcs.c  diskio.c  diskio.h  ff.c  ff.h  ffconf.h  integer.h
components/esp32usb/src/tinyusb/lib/networking/: dhserver.c  dhserver.h  dnserver.c  dnserver.h  rndis_protocol.h  rndis_reports.c
components/esp32usb/src/tinyusb/src/: tusb.c  tusb.h  tusb_option.h
components/esp32usb/src/tinyusb/src/class/audio/: audio_device.c
components/esp32usb/src/tinyusb/src/class/cdc/: cdc.h  cdc_device.c  cdc_device.h  cdc_host.c  cdc_host.h  cdc_rndis_host.c  cdc_rndis_host.h
components/esp32usb/src/tinyusb/src/class/hid/: hid.h  hid_device.c  hid_device.h  hid_host.c
components/esp32usb/src/tinyusb/src/class/msc/: msc_host.h
components/esp32usb/src/tinyusb/src/common/: tusb_common.h  tusb_fifo.c  tusb_fifo.h  tusb_mcu.h  tusb_types.h
components/esp32usb/src/tinyusb/src/device/: dcd.h  usbd.c  usbd.h  usbd_control.c  usbd_pvt.h
components/esp32usb/src/tinyusb/src/host/: usbh.c  usbh.h
components/esp32usb/src/tinyusb/src/osal/: osal_freertos.h
main/: CMakeLists.txt  app.h  app_main.cpp  usb_hid.cpp
main/cmsis-dap/: DAP.c  DAP.h  DAP_config.h  DAP_queue.c  DAP_queue.h  DAP_vendor.c
(+3 files in other folders)
